<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fdffdb"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dashboard"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#fdffdb"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/slots_available"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/pb_slots_available"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="26dp"
                    android:background="@drawable/circle_shape"
                    android:clickable="false"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="10"
                    android:progressDrawable="@drawable/circular_progress_bar" />

                <TextView
                    android:id="@+id/tv_slots_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="15%"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:background="#fdffdb"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/bgl12"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ProgressBar
                            android:id="@+id/pb_bgl12"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_marginTop="26dp"
                            android:background="@drawable/circle_shape"
                            android:clickable="false"
                            android:indeterminate="false"
                            android:max="100"
                            android:progress="10"
                            android:progressDrawable="@drawable/circular_progress_bar" />

                        <TextView
                            android:id="@+id/tv_bgl12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:text="15%"
                            android:textColor="@color/colorPrimary"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:background="#fdffdb"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/bgl13"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                        <ProgressBar
                            android:id="@+id/pb_bgl13"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_marginTop="26dp"
                            android:background="@drawable/circle_shape"
                            android:clickable="false"
                            android:indeterminate="false"
                            android:max="100"
                            android:progress="75"
                            android:progressDrawable="@drawable/circular_progress_bar" />

                        <TextView
                            android:id="@+id/tv_bgl13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:text="75%"
                            android:textColor="@color/colorPrimary"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:background="#fdffdb"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/bgl14"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ProgressBar
                            android:id="@+id/pb_bgl14"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_marginTop="26dp"
                            android:background="@drawable/circle_shape"
                            android:clickable="false"
                            android:indeterminate="false"
                            android:max="100"
                            android:progress="60"
                            android:progressDrawable="@drawable/circular_progress_bar" />

                        <TextView
                            android:id="@+id/tv_bgl14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:text="60%"
                            android:textColor="@color/colorPrimary"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:background="#fdffdb"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/bgl15"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                        <ProgressBar
                            android:id="@+id/pb_bgl15"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_marginTop="26dp"
                            android:background="@drawable/circle_shape"
                            android:clickable="false"
                            android:indeterminate="false"
                            android:max="100"
                            android:progress="85"
                            android:progressDrawable="@drawable/circular_progress_bar" />

                        <TextView
                            android:id="@+id/tv_bgl15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:text="85%"
                            android:textColor="@color/colorPrimary"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:background="#fdffdb"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/bgl16"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ProgressBar
                            android:id="@+id/pb_bgl16"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_marginTop="26dp"
                            android:background="@drawable/circle_shape"
                            android:clickable="false"
                            android:indeterminate="false"
                            android:max="100"
                            android:progress="60"
                            android:progressDrawable="@drawable/circular_progress_bar" />

                        <TextView
                            android:id="@+id/tv_bgl16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:text="60%"
                            android:textColor="@color/colorPrimary"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:background="#fdffdb"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/bgl17"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                        <ProgressBar
                            android:id="@+id/pb_bgl17"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_marginTop="26dp"
                            android:background="@drawable/circle_shape"
                            android:clickable="false"
                            android:indeterminate="false"
                            android:max="100"
                            android:progress="85"
                            android:progressDrawable="@drawable/circular_progress_bar" />

                        <TextView
                            android:id="@+id/tv_bgl17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:text="85%"
                            android:textColor="@color/colorPrimary"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
